Fix form overlapping footer by adding min-height to signup section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,6 +335,7 @@ main {
   #signup {
     background-position: center;
     position: relative;
+    min-height: 600px;
   }
 
   #signup-form {
